style: force grid-row: 1 on mobile navbar elements to prevent vertical layout shifts

--- a/src/views/Landing.module.css
+++ b/src/views/Landing.module.css
@@ -325,11 +325,13 @@
 
   .logoContainer {
     grid-column: 1;
+    grid-row: 1;
     justify-self: start;
   }
 
   .navActionsWrapper {
     grid-column: 2;
+    grid-row: 1;
     justify-self: center;
   }
 
@@ -372,6 +374,7 @@
     align-items: center;
     justify-content: center;
     grid-column: 3;
+    grid-row: 1;
     justify-self: end;
   }
 
